[project]
name = "assessment-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "langchain>=0.3.26",
    "langchain-core>=0.3.67",
    "langchain-google-genai>=2.1.6",
    "langchain-groq>=0.3.5",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "typing-extensions>=4.14.0",
    "uvicorn[standard]>=0.35.0",
]
